--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    background-color: rgb(44, 44, 44);
 
 }
 
 .main-container{
     height: 580px;
-    width: 800px;
-    background-color: rgb(243, 199, 4);
+    width: 900px;
+    background-color: rgb(29, 29, 29);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,22 +28,25 @@ body{
 }
 .clock{
     height: 400px;
-    width: 720px;
+    width: 850px;
     font-family: "Pathway Gothic One", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 15px;
 }
 .time{
-    font-size: 450px;
+    font-size: 500px;
+    color: #7bff5b;
 }
 .clock-division{
-    font-size: 100px;
+    font-size: 150px;
+    color: #7bff5b;
 }
 
 .buttons-container{
     height: 100px;
-    width: 720px;
+    width: 850px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -51,17 +54,17 @@ body{
 }
 .btn{
     height: 100px;
-    width: 235px;
+    width: 300px;
     cursor: pointer;
     border-radius: 5px;
     border: none;
     font-family: "Pathway Gothic One", sans-serif;
-    font-size: 40px;
-    background-color: rgb(0, 0, 0);
-    color: rgb(243, 199, 4);
+    font-size: 35px;
+    background-color: rgb(12, 12, 12);
+    color: #7bff5b;
 }
 .btn:hover{
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
+    background-color: #7bff5b;
+    color: rgb(29, 29, 29);
     font-weight: bolder;
 }
